--- a/src/components/avatar/index.html
+++ b/src/components/avatar/index.html
@@ -1,7 +1,10 @@
 <section class="avatar container">
     <section class="avatar__information">
         <h1 class="h1-header">Antonina<br>Antoninovna</h1>
-        <p class="avatar__data avatar__text">Future front-end developer<br>23 years old, Tolyatti</p>
+        <div class="avatar__information-wrapper">
+            <p class="avatar__data avatar__text">Future front-end developer 23 years old, Tolyatti</p>
+            <button class="avatar__button-open-menu js_button-open-menu"><img class="burger" src="/static/images/burger.svg"></button>
+        </div>
     </section>
     <div class="slider">
         <div class="slider__wrapper">
