--- a/src/components/blog/index.html
+++ b/src/components/blog/index.html
@@ -1,116 +1,8 @@
-<section class="blog container">
+<section class="blog container">           
+    <div>
+        <div class="result_js"></div>
+    </div>
     <div class="blog__wrapper">
-        <ul class="blog__list">
-            <li class="blog__item">
-                <picture>
-                    <source srcset="/static/images/dog.jpg, /static/images/dog-2.jpg 2x" media="(min-width: 1024px)">
-                    <source srcset="/static/images/dog-tablet.jpg" media="(min-width: 768px) and (max-width: 1023px)">
-                    <source srcset="/static/images/dog-mobile.jpg" media="(max-width: 767px)">
-                    <img class="blog__picture" srcset="/static/images/dog.jpg" alt="dog-picture">
-                </picture>
-                <div class="blog__block">
-                    <div class="blog__tags">
-                        <span class="blog__tags-orange"></span>
-                        <span class="blog__tags-purple"></span>
-                    </div>
-                    <div class="blog__information">
-                        <span class="blog__infotmation-date">20.01.2020</span>
-                        <span class="blog__infotmation-views">223 views</span>
-                        <span class="blog__infotmation-comments">97 comments</span>
-                    </div>
-                    <div class="blog__text">
-                        <h3 class="h3-header">This is my new dog.</h3>
-                        <p class="blog__text-info">
-                            Duis sit odio dui pretium suspendisse malesuada sit leo in. Massa nec eget etiam tellus ac. Sodales nibh pellentesque donec eu ultrices tortor condimentum massa.
-                        </p>
-                        <a href="#" class="blog__text-link">Go to this post</a>
-                    </div>
-                </div>
-            </li>
-            <li class="blog__item">
-                <picture></picture>
-                <div class="blog__block">
-                    <div class="blog__tags">
-                        <span class="blog__tags-green"></span>
-                        <span class="blog__tags-cian"></span>
-                    </div>
-                    <div class="blog__information">
-                        <span class="blog__infotmation-date">17.01.2020</span>
-                        <span class="blog__infotmation-views">12 views</span>
-                        <span class="blog__infotmation-comments">0 comments</span>
-                    </div>
-                    <div class="blog__text">
-                        <h3 class="h3-header">Why do roosters scream in the morning?</h3>
-                        <p class="blog__text-info">
-                            Erat nunc parturient feugiat egestas adipiscing erat eu. Non neque mi volutpat et lectus.
-                        </p>
-                        <a href="#" class="blog__text-link">Go to this post</a>
-                    </div>
-                </div>
-            </li>
-            <li class="blog__item">
-                <picture></picture>
-                <div class="blog__block">
-                    <div class="blog__tags">
-                        <span class="blog__tags-blue"></span>
-                    </div>
-                    <div class="blog__information">
-                        <span class="blog__infotmation-date">17.01.2020</span>
-                        <span class="blog__infotmation-views">337 views</span>
-                        <span class="blog__infotmation-comments">48 comments</span>
-                    </div>
-                    <div class="blog__text">
-                        <h3 class="h3-header">Kangaroo. Start.</h3>
-                        <p class="blog__text-info">
-                            At leo at nisl tortor egestas. Mauris luctus est luctus massa tellus erat gravida. Eget aenean eget diam habitant risus. Dapibus et, nec platea felis. Facilisi ut leo arcu, semper id pellentesque quisque ultrices etiam.
-                        </p>
-                        <a href="#" class="blog__text-link">Go to this post</a>
-                    </div>
-                </div>
-            </li>
-            <li class="blog__item">
-                <picture></picture>
-                <div class="blog__block">
-                    <div class="blog__tags">
-                        <span class="blog__tags-orange"></span>
-                        <span class="blog__tags-green"></span>
-                        <span class="blog__tags-purple"></span>
-                    </div>
-                    <div class="blog__information">
-                        <span class="blog__infotmation-date">15.01.2020</span>
-                        <span class="blog__infotmation-views">222 views</span>
-                        <span class="blog__infotmation-comments">14 comments</span>
-                    </div>
-                    <div class="blog__text">
-                        <h3 class="h3-header">Met a duckling at the pond.</h3>
-                        <p class="blog__text-info">
-                            Nulla tempus mauris sed vel bibendum. Felis urna suspendisse amet, laoreet sagittis. Semper pellentesque condimentum vitae morbi in dui. Et in et diam massa.
-                        </p>
-                        <a href="#" class="blog__text-link">Go to this post</a>
-                    </div>
-                </div>
-            </li>
-            <li class="blog__item">
-                <picture></picture>
-                <div class="blog__block">
-                    <div class="blog__tags">
-                        <span class="blog__tags-pink"></span>
-                        <span class="blog__tags-light-blue"></span>
-                    </div>
-                    <div class="blog__information">
-                        <span class="blog__infotmation-date">20.01.2020</span>
-                        <span class="blog__infotmation-views">122 views</span>
-                        <span class="blog__infotmation-comments">23 comments</span>
-                    </div>
-                    <div class="blog__text">
-                        <h3 class="h3-header">Can dogs also be friends?</h3>
-                        <p class="blog__text-info">
-                            Eu, libero aliquet nibh turpis quis nulla et ullamcorper purus. Consequat egestas sed sagittis morbi lacus. Consectetur et justo, sagittis vitae mi faucibus urna, eu. 
-                        </p>
-                        <a href="#" class="blog__text-link">Go to this post</a>
-                    </div>
-                </div>
-            </li>
-        </ul>
+        <ul class="blog__list"></ul>
     </div>
 </section>
