--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -4,6 +4,10 @@
 
 .header {      
 
+    @include media_interval(0, $media_mobile) {
+        display: none;
+    }
+
     &__navigation {
         display: flex;
         justify-content: space-between;
