--- a/src/components/mobile-menu/index.html
+++ b/src/components/mobile-menu/index.html
@@ -1,5 +1,5 @@
 <section class="mobile mobile-menu__js">
-    <button class="mobile__button-close" aria-label="close-menu">X</button>
+    <button class="mobile__button-close js_button-close-menu" aria-label="close-menu">X</button>
     <nav class="mobile__navigation">
         <ul class="mobile__list">
             <li class="mobile__item">
