--- a/src/components/modal/register-modal.html
+++ b/src/components/modal/register-modal.html
@@ -1,5 +1,5 @@
 <section class="modal register register_js">
-    <form name="modal-register" action="/" class="modal__form modal__form-register">
+    <form name="modal-register" class="modal__form modal__form-register">
         <div class="modal-wrapper">
             <label class="modal__label">
                 <p class="modal__name">Email <span class="modal__name-red">*</span></p>
