--- a/src/components/profile-editing/editing-data.html
+++ b/src/components/profile-editing/editing-data.html
@@ -1,6 +1,6 @@
 <section class="editing data data_js">
     <form name="editing-data" action="/" class="editing__form editing__form-data">
-        <div class="editing-wrapper">
+        <div class="editing-data__wrapper">
             <label class="editing__label">
                 <p class="editing__name">Email</p>
                 <input type="email" class="editing__input editing__input-data_js" name="email">
@@ -28,7 +28,7 @@
             <div class="editing__cell-50">
                 <label class="editing__label editing__label-data">
                     <p class="editing__name">Profile picture</p>
-                    <input type="file" class="editing__input" name="picture">
+                    <input type="file" class="editing__input editing__input-file" name="picture">
                 </label>
                 <label class="editing__label editing__label-data">
                 </label>
