--- a/src/components/profile/index.html
+++ b/src/components/profile/index.html
@@ -1,5 +1,8 @@
 <section class="profile container">
-    <h1 class="h1-header">My profile</h1>
+    <div class="filter__wrapper">
+        <h1 class="h1-header">My profile</h1>
+        <button class="burger__button-open-menu js_button-open-menu"><img class="burger" src="/static/images/burger.svg"></button>
+    </div>
     <div class="profile__block">
         <div class="profile__foto"><img class="nofoto" src="/static/images/no-foto.png"></div>
         <div class="profile__data">
