--- a/src/components/about-me/_about-me.scss
+++ b/src/components/about-me/_about-me.scss
@@ -10,6 +10,10 @@
 
     &__cloud {
         margin: 51px 0 62px;
+
+        @include media_interval(0, $media_mobile) {
+            margin: 30px 0 40px;
+        }
     }
 
     &__cloud-one {
@@ -18,6 +22,10 @@
         padding: 15px;
         position: relative;
         margin-bottom: 34px;
+
+        @include media_interval(0, $media_mobile) {
+            max-width: 248px;
+        }
 
         &::before {
             content: "";
@@ -50,6 +58,11 @@
         margin-bottom: 34px;        
         margin-left: 90px;
 
+        @include media_interval(0, $media_mobile) {
+            max-width: 248px;
+            margin-left: 0;
+        }
+
         &::before {
             content: "";
             position: absolute;
@@ -79,6 +92,10 @@
         padding: 15px;
         position: relative;
         margin-bottom: 20px;
+
+        @include media_interval(0, $media_mobile) {
+            max-width: 248px;
+        }
 
         &::before {
             content: "";
