--- a/src/components/avatar/_avatar.scss
+++ b/src/components/avatar/_avatar.scss
@@ -7,6 +7,15 @@
     &__information {
         display: flex;
         align-items: flex-end;
+
+        @include media_interval(0, $media_mobile) {
+            display: block;
+        }
+
+        &-wrapper {
+            display: flex;
+            justify-content: space-between;
+        }
     }
 
     &__data {
@@ -14,7 +23,25 @@
         font-size: 18px;
         line-height: 22px;
         padding-bottom: 10px;
+        max-width: 226px;
+
+        @include media_interval(0, $media_mobile) {
+            margin-left: 0;
+            max-width: 205px;
+            margin-top: 20px;
+        }
     }     
+
+    &__button-open-menu {
+        display: none;
+        padding: 0;
+        background-color: transparent;
+        border-color: transparent;
+        
+        @include media_interval(0, $media_mobile) {
+            display: block;
+        }
+    }
 
     &__vector {
         background-color: transparent;
@@ -35,6 +62,10 @@
 
 .slider {
     margin: 36px 0 60px;
+
+    @include media_interval(0, $media_mobile) {
+        margin: 24px 0 36px;
+    }
 
     &__wrapper {
         overflow: hidden;
