--- a/src/components/filter/index.html
+++ b/src/components/filter/index.html
@@ -1,60 +1,14 @@
 <section class="filter container">
-    <h1 class="h1-header">My blog</h1>
+    <div class="filter__wrapper">
+        <h1 class="h1-header">My blog</h1>
+        <button class="burger__button-open-menu js_button-open-menu"><img class="burger" src="/static/images/burger.svg"></button>
+    </div>
     <div class="filter__block">
         <form class="filter__block-form form_js">
             <div class="filter__block-form-wrapper">
                 <fieldset class="filter__block-tags">
                     <legend class="filter__block-name">Tags</legend>
-                    <ul class="filter__block-tags-list">
-                        <li class="filter__block-tags-item">
-                            <label class="filter__block-tags-label">               
-                                <input class="filter__block-tags-checkbox hidden" name="tags" type="checkbox" value="blue">
-                                <span class="filter__block-tags-text filter__block-tags-text-blue">1</span>
-                            </label> 
-                        </li> 
-                        <li class="filter__block-tags-item">
-                            <label class="filter__block-tags-label">               
-                                <input class="filter__block-tags-checkbox hidden" name="tags" type="checkbox" value="cian">
-                                <span class="filter__block-tags-text filter__block-tags-text-cian">2</span>
-                            </label>
-                        </li>
-                        <li class="filter__block-tags-item">
-                            <label class="filter__block-tags-label">               
-                                <input class="filter__block-tags-checkbox hidden" name="tags" type="checkbox" value="yellow">
-                                <span class="filter__block-tags-text filter__block-tags-text-yellow">3</span>
-                            </label>
-                        </li>
-                        <li class="filter__block-tags-item">
-                            <label class="filter__block-tags-label">               
-                                <input class="filter__block-tags-checkbox hidden" name="tags" type="checkbox" value="light-blue">
-                                <span class="filter__block-tags-text filter__block-tags-text-light-blue">4</span>
-                            </label>
-                        </li>
-                        <li class="filter__block-tags-item">
-                            <label class="filter__block-tags-label">               
-                                <input class="filter__block-tags-checkbox hidden" name="tags" type="checkbox" value="orange">
-                                <span class="filter__block-tags-text filter__block-tags-text-orange">5</span>
-                            </label>
-                        </li>
-                        <li class="filter__block-tags-item">
-                            <label class="filter__block-tags-label">               
-                                <input class="filter__block-tags-checkbox hidden" name="tags" type="checkbox" value="pink">
-                                <span class="filter__block-tags-text filter__block-tags-text-pink">6</span>
-                            </label>
-                        </li>
-                        <li class="filter__block-tags-item">
-                            <label class="filter__block-tags-label">               
-                                <input class="filter__block-tags-checkbox hidden" name="tags" type="checkbox" value="purple">
-                                <span class="filter__block-tags-text filter__block-tags-text-purple">7</span>
-                            </label>
-                        </li>
-                        <li class="filter__block-tags-item">
-                            <label class="filter__block-tags-label">               
-                                <input class="filter__block-tags-checkbox hidden" name="tags" type="checkbox" value="green">
-                                <span class="filter__block-tags-text filter__block-tags-text-green">8</span>
-                            </label>
-                        </li>
-                    </ul>   
+                    <div class="filter__block-tags-list tags-box_js"></div>
                 </fieldset>
                 <fieldset class="filter__block-views">
                     <legend class="filter__block-name">Views</legend>
@@ -107,13 +61,13 @@
                     <ul class="filter__block-shows-list">
                         <li class="filter__block-shows-item">
                             <label class="filter__block-shows-label">
-                                <input class="filter__block-shows-input hidden" name="shows" type="radio" value="show 5">
+                                <input class="filter__block-shows-input hidden" name="shows" type="radio" value="5">
                                 <span class="filter__block-shows-text">show 5</span>
                             </label>
                         </li>
                         <li class="filter__block-shows-item">
                             <label class="filter__block-shows-label">
-                                <input class="filter__block-shows-input hidden" name="shows" type="radio" value="show 10">
+                                <input class="filter__block-shows-input hidden" name="shows" type="radio" value="10">
                                 <span class="filter__block-shows-text">show 10</span>
                             </label>
                         </li>
@@ -149,7 +103,7 @@
             </div>
             <section class="search">
                 <form class="search__form" action="/">
-                    <input class="search__input" type="text" name="search">
+                    <input class="search__input" type="text" name="title">
                     <button class="search__button button" type="submit">Search</button>
                 </form>
             </section>        
