--- a/src/components/footer/_footer.scss
+++ b/src/components/footer/_footer.scss
@@ -16,6 +16,10 @@
         font-style: normal;
         font-weight: 500;
         line-height: 21px;
+
+        @include media_interval(0, $media_mobile) {
+            margin: 10px 0 40px;
+        }
     }
 
     &__button {
@@ -41,7 +45,7 @@
 
     &__list {
         display: flex;
-        max-width: 350px;
+        max-width: 360px;
         flex-wrap: wrap;        
         justify-content: space-evenly;
         margin: 40px 0;
@@ -86,6 +90,10 @@
         color: $c_grey--text;
         text-align: center;
         margin-bottom: 60px;
+
+        @include media_interval(0, $media_mobile) {
+            margin-bottom: 40px;
+        }
     }
 
     &__bottom-link {
